<resources>
    <string name="app_name">Orama</string>
    <string name="retry">Retry</string>
    <string name="tax_classification">Tax classification: </string>
    <string name="minimum_initial_application_amount">Minimum initial application amount</string>
    <string name="fees">Fees</string>
    <string name="documents">Documents</string>
    <string name="specification">Specification</string>
    <string name="fund_manager">+ Fund manager</string>
    <string name="maximum_administration_fee">Maximum administration fee:</string>
    <string name="anticipated_retrieval_fee_value">Anticipated retrieval fee value:</string>
    <string name="administration_fee">Administration fee:</string>
    <string name="anticipated_retrieval_fee">Anticipated retrieval fee:</string>
    <string name="performance_fee">Performance fee:</string>
    <string name="fund_main_strategy_name">Fund main strategy name</string>
    <string name="fund_main_strategy_explanation">Fund main strategy explanation</string>
    <string name="fund_type">Fund type</string>
    <string name="fund_class">Fund class</string>
    <string name="fund_class_anbima">Fund class anbima</string>
    <string name="document_list">Document List</string>
    <string name="alert_dialog_download_message">Do you want to download this document?</string>
    <string name="alert_dialog_download_message_download">Download</string>
    <string name="alert_dialog_download_message_no">No</string>
    <string name="fund_list">Fund list</string>
</resources>