<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fund"
            type="com.example.infrastructure.response.Fund" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fund_detail_fragment_fees_expandable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_baseline_expand_more_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fund_detail_fragment_fees_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/fees"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_fees_expandable_button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_text_view">

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/fund_detail_fragment_fees_expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="300"
                app:el_expanded="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_maximum_administration_free_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/maximum_administration_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_maximum_administration_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.maximumAdministrationFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_maximum_administration_free_label"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/anticipated_retrieval_fee_value"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_maximum_administration_free" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.anticipatedRetrievalFeeValue}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_maximum_administration_free" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_administration_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/administration_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_administration_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.administrationFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_administration_fee_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_anticipated_retrieval_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/anticipated_retrieval_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_administration_fee" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_anticipated_retrieval_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.anticipatedRetrievalFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_anticipated_retrieval_fee_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_administration_fee" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_performance_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/performance_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_anticipated_retrieval_fee" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_performance_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@{fund.fees.performanceFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_performance_fee_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_anticipated_retrieval_fee" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>