<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fund"
            type="com.example.infrastructure.response.Fund" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/fund_detail_fragment_fund_manager_photo"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fund_detail_fragment_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@{fund.fundManager.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="Oaktree Global Credit FIC FIM IE" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fund_detail_fragment_fund_manager_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@{fund.fundManager.fullName}"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_title"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fund_detail_fragment_fees_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fees"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fund_manager_name" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/fund_detail_fragment_fees_expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="300"
                app:el_expanded="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_text_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_maximum_administration_free_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/maximum_administration_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_maximum_administration_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.maximumAdministrationFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_maximum_administration_free_label"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/anticipated_retrieval_fee_value"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_maximum_administration_free" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.anticipatedRetrievalFeeValue}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_maximum_administration_free" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_administration_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/administration_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_administration_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.administrationFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_administration_fee_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_anticipated_retrieval_free_value" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_anticipated_retrieval_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/anticipated_retrieval_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_administration_fee" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_anticipated_retrieval_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@{fund.fees.anticipatedRetrievalFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_anticipated_retrieval_fee_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_administration_fee" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_performance_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/performance_fee"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_anticipated_retrieval_fee" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fund_detail_fragment_performance_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@{fund.fees.performanceFee}"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/fund_detail_fragment_performance_fee_label"
                        app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_anticipated_retrieval_fee" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </net.cachapa.expandablelayout.ExpandableLayout>

            <FrameLayout
                android:id="@+id/container_specification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fund_detail_fragment_fees_expandable_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>